<resources>
    <string-array name="syncFrequency">
        <item name="1">Once a day</item>
        <item name="7">Once a week</item>
        <item name="3">Once a year</item>
        <item name="0">Never (Update maually)</item>
    </string-array>
    <string-array name="syncFrequencyValues">
        <item name="1">1</item>
        <item name="7">7</item>
        <item name="30">30</item>
        <item name="0">0</item>
    </string-array>
    <string name="base_edit_label">Edit</string>
    <string name="base_delete_label">Delete</string>
    <string name="base_buy_label">Buy</string>
    <string name="base_add_label">Add</string>
    <string name="base_sign_in_label">Sign in</string>
    <string name="app_name">Golfing Buddy</string>
    <string name="hello_world">Android android!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="title_activity_main_fragment">MainFragmentActivity</string>
    <string name="title_activity_user_list">User List</string>
    <string name="title_latest_user_list">Latest List</string>
    <string name="user_list_empty">No Users</string>
    <string name="user_list_preloader_text">Loading...</string>
    <string name="guest_list_title">Guest List</string>
    <string name="bookmarks_list_title">Bookmarks List</string>
    <string name="empty_bookmark_list_text">No people in your bookmark list</string>
    <string name="empty_guest_list_text">Nobody visited your profile yet</string>
    <string name="credits_title">Credits</string>
    <string name="location_edit_title">Location</string>
    <string name="custom_location_default_title">Custom Location</string>
    <string name="custom_location_default_dialog_title">Custom Location</string>
    <string name="current_location_default_title">Current Location</string>
    <string name="invalid_current_location_error_message">Can\'t detect your current location</string>
    <string name="location_distance_default_title">Distance</string>
    <string name="location_distance_kms_title">Distance in kms</string>
    <string name="location_distance_miles_title">Distance in miles</string>
    <string name="location_distance_default_dialog_title">Distance</string>
    <string name="location_distance_kms_dialog_title">Distance in kms</string>
    <string name="location_distance_miles_dialog_title">Distance in miles</string>
    <string name="location_distance_miles">miles</string>
    <string name="location_distance_kms">kms</string>
    <string name="location_distance_from">from</string>
    <string name="about_fargment_title">About</string>
<string name="about_fargment_context">This is the application for %1$s.
    It extends the experience for mobile devices, and uses your existing account on the website.
</string>
    <string name="search_result_title">Search Result</string>
    <string name="search_result_filter_menu_label">Filter</string>
    <string name="search_result_filter_activity_title">Filter</string>
    <string name="search_result_no_users_text">No users found matching the criteria</string>
    <string name="search_result_no_permissions">You can\'t search users due to limited permissions</string>
    <string name="search_advanced_options_label">Advanced options</string>
    <string-array name="search_result_filter_menu">
        <item>Filter</item>
    </string-array>
    <string name="search_profile_form_title">Search Profile</string>
    <string name="membership_activity_title">Memberships &amp; Сredits</string>
    <string name="membership_tab_title">Memberships</string>
    <string name="credit_tab_title">Credits</string>
    <string name="membership_details_activity_label"></string>
    <string name="credits_balance_label">Your credits is: %1$s </string>
    <string name="credits_check_cost_of_actions_title">Check Cost of Actions</string>
    <string name="membership_pack_label">Membership</string>
    <string name="credit_pack_label">Credits</string>
    <string name="subscribe_learn_more">Learn more &amp; save</string>
    <string name="subscribe_or_buy_title">Upgrade</string>
    <string name="subscribe_no_subscribe_items">No Items</string>
    <string name="credits_earning_actions_label">Receiving credits</string>
    <string name="credits_spending_actions_label">Losing credits</string>
    <string name="credits_cost_of_actions_title">Cost Of Actions</string>
    <string name="credit_packs">Credit packs</string>
    <string name="memberships_and_credits_title">Memberships &amp; Credits</string>
    <string name="memberships_title">Memberships</string>
    <string name="subscribe_succsess">Membership has been updated</string>
    <string name="subscribe_trial_error">Error in user membership update</string>
    <string name="edit_profile_form_title">Edit Profile</string>
    <string name="matches_titlet">My Matches</string>
    <string name="matches_index">%1$d of %2$d</string>
    <string name="matches_display_name_and_age">%1$s, %2$d</string>
    <string name="matches_compatibility">Compatibility %1$s%%</string>
    <string name="matches_subscribe">Please upgrade to view photos ></string>
    <string name="matches_cant_view">You can\'t view this photo due to limited permissions</string>
    <string name="matches_sort_lagel">Sort by:</string>
    <string name="matches_sort_newest">Join Date</string>
    <string name="matches_sort_compatibility">Compatibility</string>
    <string name="hello_blank_fragment">View My Matches</string>
    <string name="speedmatches_title">SpeedMatches</string>
    <string name="speedmatches_filter_show_me_title">Show Me</string>
    <string name="speedmatches_filter_age_title">Age</string>
    <string name="speedmatches_filter_age">from %1$s to %2$d years old</string>
    <string name="speedmatches_filter_distance">Distance from current location</string>
    <string name="speedmatches_no_items">No users found matching the criteria.\nPlease, come later.</string>
    <string name="speedmatches_filter_bar_title">Filter</string>
    <string name="speedmatches_mutual">Congratulations! You have a successful match with %1$s</string>
    <string name="speedmatches_permissions">You can\'t view profile due to limited permissions</string>
    <string name="speedmatches_subscribe">Please upgrade to view profiles</string>
    <string name="hotlist_title">Hot List</string>
    <string name="hotlist_add">I want to be hot!</string>
    <string name="hotlist_remove">Remove from Hot List</string>
    <string name="hotlist_add_confirm_message">Stand out from the crowd. Do you want to add yourself to the Hot List?</string>
    <string name="hotlist_add_confirm_message_promo">Stand out from the crowd. Do you want to add yourself to the Hot List?</string>
    <string name="hotlist_add_confirm_buy">Please buy credits to add yourself to the Hot List</string>
    <string name="hotlist_add_confirm_subscribe">Please upgrade to add yourself to the Hot List</string>
    <string name="hotlist_add_confirm_both">Please buy credits or upgrade to add yourself to the Hot List</string>
    <string name="hotlist_btn_cancel">Cancel</string>
    <string name="hotlist_btn_buy">Buy</string>
    <string name="hotlist_btn_add">Add</string>
    <string name="hotlist_btn_remove">Ok</string>
    <string name="hotlist_remove_confirm_title">Are you sure you want to delete yourself from the Hot List? You will not be reimbursed for that.</string>
    <string name="hotlist_please_wait">Please, wait&#8230;</string>
    <string name="hotlist_no_items">Be the hottest person around here!\nAdd yourself to the Hot List</string>
    <string name="mailbox_title">Messages</string>
    <string name="mailbox_send_dialog_title">Choose Type of Message</string>
    <string name="mailbox_send_dialog_chat">Chat</string>
    <string name="mailbox_send_dialog_mail">Mail</string>
    <string name="mailbox_attachment_dialog_title">Open</string>
    <string name="mailbox_attachment_dialog_gallery">Gallery</string>
    <string name="mailbox_attachment_dialog_select_app">Use file manager</string>
    <string name="mailbox_attachment_dialog_camera">Camera</string>
    <string name="mailbox_attachment_open_app_not_found">There is no application to open %1$s</string>
    <string name="mailbox_attachment_open_use_app">Use application:</string>
    <string name="mailbox_mail_send_success">Message has been successfully sent</string>
    <string name="mailbox_mail_send_no_user">Select user to send message</string>
    <string name="mailbox_mail_send_no_subject">Subject field is empty</string>
    <string name="mailbox_mail_send_no_text">Message field is empty</string>
    <string name="mailbox_conversation_list_display_name">%1$s (%2$d)</string>
    <string name="mailbox_as_read">Mark as read</string>
    <string name="mailbox_as_unread">Mark as unread</string>
    <string name="mailbox_delete">Delete</string>
    <string name="mailbox_delete_history">Delete history</string>
    <string name="mailbox_compose_title">New Messages</string>
    <string name="mailbox_compose_to">To:</string>
    <string name="mailbox_compose_subject">Subject:</string>
    <string name="mailbox_compose_placeholder">Compose message&#8230;</string>
    <string name="mailbox_compose_send_message">Please, wait&#8230;</string>
    <string name="mailbox_reply_title">Re: %s</string>
    <string name="mailbox_send_message">Please, wait&#8230;</string>
    <string name="mailbox_attachment_viewer_save">Save to device</string>
    <string name="mailbox_conversation_list_no_items">No conversations yet</string>
    <string name="mailbox_conversation_list_wink">Winked at you</string>
    <string name="mailbox_conversation_list_wink_back">Wink back</string>
    <string name="mailbox_conversation_list_wink_accept">Accept</string>
    <string name="mailbox_conversation_list_wink_ignore">Ignore</string>
    <string name="mailbox_wink_message_text">Tap to wink back or send message in return</string>
    <string name="mailbox_authorize_read_message">Read message</string>
    <string name="album_view_activity_title">Albums</string>
    <string name="photomanage_delete_empty_list_msg">Select at least one photo to delete</string>
    <string name="photomanage_delete_confirm_msg">Are you sure you want to delete selected photos?</string>
    <string name="photomanage_delete_confirm_title">Delete Photo</string>
    <string name="no_photos_label">No Photos yet</string>
    <string name="no_photo_permissions_label">You can\'t view photos due to limited permissions</string>
    <string name="profile_view_permissions_label">You can\'t view profile due to limited permissions</string>
    <string name="profile_view_subscribe_label">Upgrade to view profiles</string>
    <string name="profile_view_privicy_label">You can\'t view profile due to user privacy</string>
    <string name="subscribe_photo_label">Please upgrade to view photo</string>
    <string name="subscribe_photo_add_label">Please upgrade to add photo</string>
    <string name="subscribe_photo_add_title">Upgrade to add photo</string>
    <string name="photo_view_all_albums">View All Albums</string>
    <string name="profile_view_compat_label">Compatibility</string>
    <string name="prompt_email">Username/Email</string>
    <string name="prompt_password">Password</string>
    <string name="change_site_button_label">&lt; Change Site</string>
    <string name="auth_back_to_choose">&lt; Back</string>
    <string name="join_form_join_button_label">Done</string>
    <string name="base_sign_up_label">Sign up</string>
    <string name="reset_email_verify_text">Did not receive a Verification Code?</string>
    <string name="reset_email_verify_resend">Resend</string>
</resources>