<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/photo_view_root">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gridViewParent"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <com.golfingbuddy.ui.base.classes.ExpandableHeightGridView
        android:id="@+id/gridView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:gravity="center"
        android:columnWidth="100dp"
        android:numColumns="auto_fit"
        android:verticalSpacing="1dp"
        android:horizontalSpacing="1dp"
        android:drawSelectorOnTop="true"
        android:isScrollContainer="false"
        android:stretchMode="columnWidth"
        android:visibility="gone">
    </com.golfingbuddy.ui.base.classes.ExpandableHeightGridView>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:id="@+id/view_albums_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
        <Button
            android:id="@+id/view_albums"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="#ebebeb"
            android:text="@string/photo_view_all_albums"
            android:textColor="#4d4d4d"
            android:textSize="18sp"
            android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SKProgressBarLarge"
        android:layout_marginRight="5dp"
        android:layout_centerInParent="true" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/owner_no_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:visibility="gone">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/addphotos"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#999"
            android:text="@string/no_photos_label"
            android:gravity="center"
            android:textSize="20sp"
            android:paddingTop="10dp"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/no_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:visibility="gone">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/nophotosyet"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#999"
            android:text="@string/no_photos_label"
            android:gravity="center"
            android:textSize="20sp"
            android:paddingTop="10dp"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/permissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:visibility="gone">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/lock_disable"/>
        <TextView
            android:id="@+id/permissions_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#999"
            android:text="@string/no_photo_permissions_label"
            android:gravity="center"
            android:textSize="20sp"
            android:paddingTop="10dp"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/subscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:visibility="gone">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:id="@+id/subscribe_img"
            android:src="@drawable/lock_enable"/>
        <TextView
            android:id="@+id/subscribe_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#999"
            android:text="@string/subscribe_photo_label"
            android:gravity="center"
            android:textSize="20sp"
            android:paddingTop="10dp"/>
    </LinearLayout>

</RelativeLayout>