<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/content_layout"
    tools:context="com.golfingbuddy.ui.profile.ProfileViewActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SKProgressBarLarge"
        android:layout_marginRight="5dp"
        android:layout_centerInParent="true" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/permissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:visibility="gone">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/lock_disable"/>
        <TextView
            android:id="@+id/permissions_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#999"
            android:text="@string/profile_view_permissions_label"
            android:gravity="center"
            android:textSize="20sp"
            android:paddingTop="10dp"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:visibility="gone">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/lock_disable"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#999"
            android:text="@string/profile_view_privicy_label"
            android:gravity="center"
            android:textSize="20sp"
            android:paddingTop="10dp"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/subscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:visibility="gone">
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:id="@+id/subscribe_img"
            android:src="@drawable/lock_enable"/>
        <TextView
            android:id="@+id/subscribe_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#999"
            android:text="@string/profile_view_subscribe_label"
            android:gravity="center"
            android:textSize="20sp"
            android:paddingTop="10dp"/>
    </LinearLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        tools:context="com.golfingbuddy.ui.profile.ProfileViewActivity"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/gridView">

            <com.golfingbuddy.ui.base.classes.SlidingTabLayout
                android:id="@+id/sliding_tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/gridView"></android.support.v4.view.ViewPager>

        </LinearLayout>

        <GridView
            android:id="@+id/gridView"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/grad1"
            android:columnWidth="100dp"
            android:drawSelectorOnTop="true"
            android:gravity="center"
            android:horizontalSpacing="1dp"
            android:numColumns="auto_fit"
            android:padding="0dp"
            android:stretchMode="columnWidth"
            android:verticalSpacing="1dp"
            android:visibility="gone"></GridView>

    </RelativeLayout>
</RelativeLayout>
